--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,3 @@
-﻿################################################################################
-# この .gitignore ファイルは Microsoft(R) Visual Studio によって自動的に作成されました。
-################################################################################
-
-/.vs
-/SqlTools/.vs/
-/SqlTools/SqlTools/bin/
-/SqlTools/SqlTools/obj
+﻿.vs/
+bin/
+obj/
